<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundStatus">

<LinearLayout
    android:orientation="vertical"
    android:layout_marginHorizontal="5sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:text="How to Use"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="20sp"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="Main Page"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10sp"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/blank_main_activity"
        android:layout_gravity="center"
        android:paddingTop="10sp"
        android:layout_width="150dp"
        android:layout_height="300dp"/>

    <TextView
        android:text="@string/blank_main_activity"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Pet Entry Page"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10sp"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/pet_data_entry"
        android:layout_gravity="center"
        android:paddingTop="20sp"
        android:layout_width="300dp"
        android:layout_height="200dp"/>

    <TextView
        android:text="@string/pet_data_entry"
        android:gravity="left"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/main_activity"
        android:layout_gravity="center"
        android:paddingTop="10sp"
        android:layout_width="150dp"
        android:layout_height="300dp"/>

    <TextView
        android:text="@string/main_activity"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>